fix(table): change cell v-align to middle

--- a/css/variables/components/_tables.scss
+++ b/css/variables/components/_tables.scss
@@ -17,7 +17,7 @@
   --table-cell-padding-v: 10px;
   --table-cell-padding-h: 20px;
   --table-cell-text-align: center;
-  --table-cell-v-align: center;
+  --table-cell-v-align: middle;
   --table-cell-text-color: var(--color-text);
 
   // header variant
